@@ -13,6 +13,6 @@
     missingok
     compress
     postrotate
-      /usr/bin/fail2ban-client set logtarget /var/log/fail2ban.log 1>/dev/null || true
+      /usr/bin/fail2ban-client flushlogs  1>/dev/null || true
     endscript
 }
